# Schule_Projekt_Inventar

./: CMakeLists.txt  Icons.qrc  Inventur_create_Tablessql.sql  Testplanung.docx  cdia_anmelden.h  cdia_neuanlage.cpp  cdia_neuanlage.h  cmanager_inventurverwaltung.cpp  cmanager_inventurverwaltung.h  filterproxymodel.cpp  filterproxymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ~$stplanung.docx  📅 IHK.docx
Planung/: Testplanung.docx  ~$📅 IHK.docx
inc/: cdia_neuanlage.h  cmanager_inventurverwaltung.h  cmyapplication.h  mainwindow.h
src/: cdia_anmelden.cpp  cdia_neuanlage.cpp  cmanager_inventurverwaltung.cpp  cmyapplication.cpp  main.cpp  mainwindow.cpp
ui/: Icons.qrc  cdia_anmelden.ui  cdia_neuanlage.ui  mainwindow.ui
